# coverage_planning

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py  test.py
cpp/: bsd.py  cells.py  coverage_ros.py  dfs_tree.py  helpers.py  main.py  msp.py  processing.py
data/: path.csv  path.npy  path_zero_heading.npy
data/test/: test_path.csv  test_path_fmt.csv
launch/: coverage_node.launch
launch /: coverage_node.launch
logs/images/: test_path.csv
tests/: bsd_test.py  cells_test.py  create_test_path.py  helpers_test.py  optimizer_test.py  play.py  system_test.py  test_boundary_selection.py  test_dfs_tree.py  test_processing.py  two_cells.py
tests/data/: straight_path.npy
